added a table of server parameter descriptions

--- a/apx-parameters.tex
+++ b/apx-parameters.tex
@@ -6,5 +6,7 @@ Parameters recognized in configuration files under /etc/cvmfs:
 
 \LTXtable{\textwidth}{figures/tabparameters.tex}
 
+\pagebreak
+
 \section{Server parameters}
-{\huge tbd}
+\LTXtable{\textwidth}{figures/tabserverparameters.tex}
