--- a/figures/tabserverparameters.tex
+++ b/figures/tabserverparameters.tex
@@ -10,7 +10,11 @@
 		\tt CVMFS\_UPSTREAM\_STORAGE			& Upstream spooler description defining the basic upstream storage type and configuration.\\
 		\tt CVMFS\_STRATUM0					& URL of the master copy (\texttt{stratum0}) of this specific repository.\\
 		\tt CVMFS\_UNION\_DIR					& Mount point of the union file system between \cvmfs\ and \aufs. Here, changes to the repository are performed (see Section \ref{sct:repocreateandupdate}).\\
-		\tt CVMFS\_USER							& The user name that owns and manipulates the files inside the repository.\\
+		\tt CVMFS\_USER						& The user name that owns and manipulates the files inside the repository.\\
+		\tt CVMFS\_USE\_FILE\_CHUNKING		& Allows backend to split big files into small chunks (\texttt{true} | \texttt{false})\\
+		\tt CVMFS\_MIN\_CHUNK\_SIZE			& Minimal size of a file chunk in bytes \newline (depends on \texttt{CVMFS\_USE\_FILE\_CHUNKING})\\
+		\tt CVMFS\_AVG\_CHUNK\_SIZE			& Desired Average size of a file chunk in bytes \newline (depends on \texttt{CVMFS\_USE\_FILE\_CHUNKING})\\
+		\tt CVMFS\_MAX\_CHUNK\_SIZE			& Maximal size of a file chunk in bytes \newline (depends on \texttt{CVMFS\_USE\_FILE\_CHUNKING})\\
 		\bottomrule
 	\end{longtable}
 %\end{longtable}
