LaTeX-conform accent aigu

--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -68,7 +68,7 @@
 		
 		\includegraphics[height=4cm]{figures/cvmfs}\\[1.5cm]
   
-		\large Jakob Blomer \qquad Predrag Buncic \qquad René Meusel\\[0.4cm]
+		\large Jakob Blomer \qquad Predrag Buncic \qquad Ren\'e Meusel\\[0.4cm]
 		\url{jblomer@cern.ch}
 		%\today
   
