--- a/figures/tabserverparameters.tex
+++ b/figures/tabserverparameters.tex
@@ -4,6 +4,7 @@
 		\toprule
 		{\bf\centering Parameter} 			& {\bf\centering Meaning}\\
 		\midrule
+		\tt CVMFS\_CREATOR\_VERSION			& The \cvmfs\ version that was used to create this repository (do not change manually).\\
 		\tt CVMFS\_REPOSITORY\_NAME			& The fully qualified name of the specific repository.\\
 		\tt CVMFS\_REPOSITORY\_TYPE			& Defines if the repository is a master copy (\texttt{stratum0}) or a replica (\texttt{stratum1}).\\
 		\tt CVMFS\_SPOOL\_DIR					& Location of the upstream spooler scratch directories; the read-only \cvmfs\ moint point and copy-on-write storage reside here.\\
