--- a/cpt-quickstart.tex
+++ b/cpt-quickstart.tex
@@ -14,7 +14,7 @@ The \texttt{cvmfs-release} packages are available under \url{https://cernvm.cern
 The \cvmfs\ client is not relocatable and needs to be installed under /usr.
 In order to compile and install from sources, use the following \cmake\ command:
 \begin{verbatim}
-  cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr .
+  cmake .
   make
   sudo make install
 \end{verbatim}
