--- a/cpt-quickstart.tex
+++ b/cpt-quickstart.tex
@@ -12,6 +12,7 @@ The \texttt{cvmfs-release} packages can be used to add a these \yum\ repositorie
 The \texttt{cvmfs-release} packages are available under \url{https://cernvm.cern.ch/portal/downloads}.
 
 The \cvmfs\ client is not relocatable and needs to be installed under /usr.
+It compiles on x86, x86\_64, and ARMv6 architectures (on ARM it requires at least gcc 4.7).
 In order to compile and install from sources, use the following \cmake\ command:
 \begin{verbatim}
   cmake .
