--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -11,6 +11,7 @@
 		\tt CVMFS\_CHECK\_PERMISSIONS		& If set to ``no'', disable checking of file ownership and permissions (open all files).\\
 		\tt CVMFS\_DEBUGLOG				& If set, run \cvmfs\ in debug mode and write a verbose log the the specified file.\\
 		\tt CVMFS\_DEFAULT\_DOMAIN			& The default domain will be automatically appended to repository names when given without a domain.\\
+		\tt CVMFS\_HOST\_RESET\_AFTER		& See \texttt{CVMFS\_PROXY\_RESET\_AFTER}.\\
 		\tt CVMFS\_HTTP\_PROXY				& Chain of HTTP proxy groups used by \cvmfs. Necessary. Set to \texttt{DIRECT} if you don't use proxies.\\
 		\tt CVMFS\_IGNORE\_SIGNATURE		& When set to ``yes'', don't verify \cvmfs\ file catalog signatures.\\
 		\tt CVMFS\_KCACHE\_TIMEOUT			& Timeout for path names and file attributes in the kernel file system buffers.\\
