additions to the private mount points

--- a/apx-rpms.tex
+++ b/apx-rpms.tex
@@ -16,6 +16,7 @@ The \cvmfs\ software is available in form of several RPM packages:
 		Depends on cvmfs.
 	\item[cvmfs-server] Contains the \cvmfs\ server tool kit for maintaining Stratum~0 and Stratum~1 servers.
 		Depends on cvmfs-keys and httpd.
-	\item[kernel-aufs21-$\cdots$] Scientific Linux 6 kernel with aufs.
+	\item[kernel-$\cdots$-.aufs21] Scientific Linux 6 kernel with aufs.
 		Required for SL6 based Stratum~0 servers.
+	\item[cvmfs-unittests] Contains the \texttt{cvmfs\_unittests} binary.  Only required for testing.
 \end{description}
