--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -4,6 +4,7 @@
 		\toprule
 		{\bf\centering Parameter} 			& {\bf\centering Meaning}\\
 		\midrule
+		\tt CVMFS\_ALIEN\_CACHE			& If set, use an alien cache at the given location\\
 		\tt CVMFS\_AUTO\_UPDATE			& If set to ``no'', disables the automatic update of file catalogs.\\
 		\tt CVMFS\_BACKOFF\_INIT			& Seconds for the maximum initial backoff when retrying to download data.\\ 
 		\tt CVMFS\_BACKOFF\_MAX			& Maximum backoff in seconds when retrying to download data.\\
